# mpc

pkg/: ChangeLog  DESCRIPTION  NAMESPACE  README  TODO  configure  configure.ac
pkg/R/: Ops.mpc.R  mpc-utils.R  mpc.R  mpc.trig.R  zzz.R
pkg/inst/doc/: mpc.bib
pkg/inst/unitTests/: Makefile  runit.exp.R  runit.log.R  runit.ops.R
pkg/man/: Ops.mpc.Rd  mpc-utils.Rd  mpc.Rd
pkg/src/: Makevars.in  Rmpc.h  init.c  mpc.c  mpc_log.c  mpc_proj.c  mpc_trig.c
pkg/tests/: doRUnit.R
pkg/vignettes/: mpc.Rnw
www/: index.php
